--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Quiz App</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="./css/tablet.css">
     <script src="./js/script.js" defer></script>
 </head>
 
