--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </span>
             </div>
             
-            <progress id="questionBar" value="20" max="100"></progress>
+            <progress id="questionBar" value="0" max="100"></progress>
         </section>
         <section class="middle-section">
             <div class="middle-section-box">
@@ -68,7 +68,7 @@
                 <span>
                     <p>1000</p>
                     <div class="pointsBar-container">
-                        <progress id="pointsBar" value="40" max="100"></progress>
+                        <progress id="pointsBar" value="" max="100"></progress>
                     </div>
                     <p>0</p>
                 </span>
