--- a/index.html
+++ b/index.html
@@ -36,30 +36,30 @@
         </section>
         <section class="middle-section">
             <div class="middle-section-box">
-                <h3 id="question">tttttttttttttttttttttt</h3>
+                <h3 id="question">Loading..</h3>
                 <ul id="answers">
                     <li>
                         <span>
                             <h4>A</h4>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Loading..</p>
                         </span>
                     </li>
                     <li>
                         <span>
                             <h4>B</h4>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Loading..</p>
                         </span>
                     </li>
                     <li>
                         <span>
                             <h4>C</h4>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Loading..</p>
                         </span>
                     </li>
                     <li>
                         <span>
                             <h4>D</h4>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Loading..</p>
                         </span>
                     </li>
                 </ul>
@@ -68,7 +68,7 @@
                 <span>
                     <p>1000</p>
                     <div class="pointsBar-container">
-                        <progress id="pointsBar" value="" max="100"></progress>
+                        <progress id="pointsBar" value="0" max="100"></progress>
                     </div>
                     <p>0</p>
                 </span>
@@ -88,7 +88,7 @@
                     <p id="incorrectText">❌ Incorrect. The correct answer was: </p>
                 </span>
             </div>
-            <button>Next Question →</button>
+            <button id="nextBtn">Next Question →</button>
         </section>
     </main>
 </body>
