Added checkAnswer function and added an eventlistener which listens to what li element you click on, also checks if its correct or not. Also added som variables and changed some small stuff

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="top-section-question">
                 <span>
                     <img src="./img/star.svg" alt="">
-                    <p id="questionNmb">Question 1/10</p> 
+                    <p id="questionNmb">Question 1/10</p>
                 </span>
             </div>
-            
+
             <progress id="questionBar" value="0" max="100"></progress>
         </section>
         <section class="middle-section">
@@ -85,7 +85,7 @@
             </div>
             <div id="incorrect">
                 <span>
-                    <p id="incorrectText">❌ Incorrect. The correct answer was: </p>
+                    <p id="incorrectText"></p>
                 </span>
             </div>
             <button id="nextBtn">Next Question →</button>
