ticket 4 och 5 - poänglogik och next knapp

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
             <button id="nextBtn">Next Question →</button>
         </section>
     </main>
+    <dialog id="result"> 
+        <div class="result-container">
+            <ul>
+                <li>Spelet är slut!</li>
+                <li id="result-score">Total score: X</li>
+            </ul>
+        </div>
+    </dialog>
 </body>
 
 </html>
