fixed colors and made the points relative to the scorebar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <p>0</p>
                 </span>
                 <span>
-                    <p id="points">0 Points</p>
+                    <p id="points">0 Pts</p>
                 </span>
             </div>
         </section>
@@ -91,7 +91,7 @@
             <button id="nextBtn">Next Question →</button>
         </section>
     </main>
-    <dialog id="result"> 
+    <dialog id="result">
         <div class="result-container">
             <ul>
                 <li>Spelet är slut!</li>
