--- a/index.html
+++ b/index.html
@@ -12,6 +12,56 @@
 </head>
 
 <body>
+    <dialog open id="startDialog">
+        <p>Player Name</p>
+        <input id="playerName" type="text" placeholder="Player Name"> 
+        <p>Start quiz</p>
+
+        <select id="trivia_category" name="trivia_category" class="form-controlcat">
+
+            <option value="any">Any Category</option>
+
+            <option value="9">General Knowledge</option>
+
+            <option value="11">Entertainment: Film</option>
+
+            <option value="12">Entertainment: Music</option>
+
+            <option value="15">Entertainment: Video Games</option>
+
+            <option value="18">Science: Computers</option>
+
+            <option value="20">Mythology</option>
+
+            <option value="21">Sports</option>
+
+            <option value="22">Geography</option>
+
+            <option value="23">History</option>
+
+            <option value="24">Politics</option>
+
+            <option value="27">Animals</option>
+
+            <option value="28">Vehicles</option>
+
+            <option value="29">Entertainment: Comics</option>
+
+            <option value="30">Science: Gadgets</option>
+
+            <option value="31">Entertainment: Japanese Anime &amp; Manga</option>
+
+        </select>
+        <select id="trivia_difficulty" name="trivia_difficulty" class="form-controldiff">
+            <option value="any">Any Difficulty</option>
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="hard">Hard</option>
+        </select>
+        <form method="dialog">
+        <button id="startButton">Start Quiz!</button>
+        </form>
+    </dialog>
     <main>
         <section class="top-section">
             <div class="top-section-box">
