i have set the enviroment for me to make a timer and the gtag functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-    <dialog open id="startDialog">
+    <dialog open id="termsConditions">
+        <p>im ok with having my data stolen</p>
+        <button id="condYes">Yes</button>
+        <button id="condNo">No :( </button>
+    </dialog>
+    <dialog  id="startDialog">
         <p>Player Name</p>
         <input id="playerName" type="text" placeholder="Player Name"> 
         <p>Start quiz</p>
