--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="./js/script.js" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=XXXXXXXXX" defer></script>
+
 </head>
 
 <body>
