--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){ dataLayer.push(arguments); }
+
+        gtag('js', new Date());
+        gtag('config', 'G-XXXXXXX'); // your GA4 Measurement ID
+    </script>
     <script src="./js/script.js" defer></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=XXXXXXXXX" defer></script>
+    
 
 </head>
 
