--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Testa dina kunskaper med våra roliga och utmanande quiz! Spela gratis, jämför resultat med vänner och upptäck nya frågor varje dag." />
     <title>Quiz App</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/mobile.css">
@@ -147,6 +149,7 @@
                 </span>
             </div>
             <button id="nextBtn">Next Question →</button>
+            <button id="finish">Finish</button>
         </section>
     </main>
     <dialog id="result">
@@ -163,13 +166,13 @@
     <dialog id="leaderboard">
         <span>
             <h1>Leaderboard🥇</h1>
-                <p>Choose Difficulty</p>
-                <select name="choosediff" id="selectdiff">
-                    <option value="All">All</option>
-                </select>
-        <ul id="scoreboard">
-        </ul>
-        <button onclick="restartQuiz()">Close</button>
+            <p>Choose Difficulty</p>
+            <select name="choosediff" id="selectdiff">
+                <option value="All">All</option>
+            </select>
+            <ul id="scoreboard">
+            </ul>
+            <button onclick="restartQuiz()">Close</button>
         </span>
     </dialog>
 </body>
