--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-0LT82XYRXF"
     ></script>
+    
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      tag("config", "G-0LT82XYRXF"); // your GA4 Measurement ID
+      gtag("config", "G-0LT82XYRXF");
     </script>
+
     <script src="./js/script.js" defer></script>
   </head>
 
