--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-0LT82XYRXF"
     ></script>
-    
+    <!-- Google tag (gtag.js) -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-0LT82XYRXF");
+      gtag("config", 'G-0LT82XYRXF');
     </script>
 
     <script src="./js/script.js" defer></script>
